--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#ff9800</color>
     <color name="colorAccentPressed">#fab144</color>
     <color name="colorLightPrimary">#c8e6c9</color>
-    <color name="colorTextIcons">#FFFFFF</color>
+    <color name="colorTextIcons">#ffffff</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#727272</color>
     <color name="colorDivider">#bfbfbf</color>
