--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#29BE6D</color>
+    <color name="colorPrimary">#29be6d</color>
     <color name="colorPrimaryDark">#20985A</color>
     <color name="colorAccent">#ff9800</color>
     <color name="colorAccentPressed">#fab144</color>
