--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -7,6 +7,62 @@
     android:orientation="vertical"
     tools:context="ua.kpi.ecampus.ui.activity.VotingStudentActivity">
 
+  <ua.kpi.ecampus.ui.view.TextViewDrawableSize
+      style="@style/Margin"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:drawableLeft="@drawable/icon_calendar"
+      android:text="Опитування"
+      android:gravity="center"
+      android:drawablePadding="16dp"
+      android:textStyle="bold"
+      android:textSize="16sp"
+      app:compoundDrawableHeight="28dp"
+      app:compoundDrawableWidth="28dp"/>
 
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <Spinner
+        android:id="@+id/spinner_terms"
+        style="@style/Margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""/>
+
+
+  </FrameLayout>
+
+  <ua.kpi.ecampus.ui.view.TextViewDrawableSize
+      style="@style/Margin"
+      android:id="@+id/tv_title_teachers"
+      android:visibility="invisible"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:gravity="center"
+      android:drawablePadding="16dp"
+      android:drawableLeft="@drawable/icon_grad_hat"
+      android:textSize="16sp"
+      app:compoundDrawableHeight="28dp"
+      app:compoundDrawableWidth="28dp"
+      android:text="Викладачі"
+      android:textStyle="bold"/>
+
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/recyclerview_teachers"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      android:scrollbars="vertical"/>
 
 </LinearLayout>
