--- a/app/src/main/res/layout/activity_archive_rating.xml
+++ b/app/src/main/res/layout/activity_archive_rating.xml
@@ -22,7 +22,7 @@
       android:id="@+id/clTeacherRating"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:visibility="invisible"
+      android:visibility="visible"
       >
 
     <TextView
